--- a/static/sidebar-component.css
+++ b/static/sidebar-component.css
@@ -47,7 +47,3 @@
     font-size: .75rem;
     text-transform: uppercase;
 }
-
-.sidebar-main {
-    padding-top: 57px; /* Space for fixed navbar */
-}
